--- a/style.css
+++ b/style.css
@@ -1,4 +1,65 @@
+    /* Reset */
 *{
     padding: 0;
     margin: 0;
+}
+
+/* Main Container */
+
+.main-container{
+    width: 1440px;
+    height: 4706px;
+    background-color: brown;
+    border: 2px solid blueviolet;
+    margin: auto;
+    position: relative;
+}
+
+.header-main-container{
+    width: 1288px;
+    height: 680px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: goldenrod;
+}
+
+/* Nav Bar Section */
+
+.nav-bar-main-container{
+    width: 1288px;
+    height: 100px;
+    background-color: dimgray;
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav-bar-left-section{
+   width: 40%;
+   display: flex;
+   justify-content: space-between;
+   align-content: center;
+   align-items: center;
+}
+
+.nav-bar-left-section ul{
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+ }
+ 
+
+.nav-bar-right-section{
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-bar-right-section .date-div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
